--- a/code/test/progress.html
+++ b/code/test/progress.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="Style.css">
+	<link rel="stylesheet" href="pro_style.css">
 </head>
 <body>
  
 
-<h1>Our Process</h1>
-<br> 
 <div class="process-wrapper">
 <div id="progress-bar-container">
 	<ul>
-		<li class="step step01 active"><div class="step-inner">HOME WORK</div></li>
-		<li class="step step02"><div class="step-inner">RESPONSIVE PART</div></li>
-		<li class="step step03"><div class="step-inner">Creative cREATIONS</div></li>
-		<li class="step step04"><div class="step-inner">TESTIMONIALS PART</div></li>
-		<li class="step step05"><div class="step-inner">OUR LOCATIONS</div></li>
+		<li class="step step01 active"><div class="step-inner">step1</div></li>
+		<li class="step step02"><div class="step-inner">step2</div></li>
+		<li class="step step03"><div class="step-inner">step3</div></li>
+		<li class="step step04"><div class="step-inner">step4</div></li>
+		<li class="step step05"><div class="step-inner">step5</div></li>
 	</ul>
 	
 	<div id="line">
@@ -28,27 +26,27 @@
 
 <div id="progress-content-section">
 	<div class="section-content discovery active">
-		<h2>HOME SECTION</h2>
+		<h2>step1</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
 	</div>
 	
 	<div class="section-content strategy">
-		<h2>GALLERY SECTION</h2>
+		<h2>step2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
 	</div>
 	
 	<div class="section-content creative">
-		<h2>Creative CREATIONS</h2>
+		<h2>step2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
 	</div>
 	
 	<div class="section-content production">
-		<h2>TESTIMONIALS NOW</h2>
+		<h2>step2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
 	</div>
 	
 	<div class="section-content analysis">
-		<h2>OUR LOCATIONS</h2>
+		<h2>step2</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
 	</div>
 	</div>
