--- a/code/index1.html
+++ b/code/index1.html
@@ -151,22 +151,22 @@
                 <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active" style="background-image:url(photo.png);">
+                <div class="carousel-item active" style="background-image:url(img\ \(10\).png);">
                     <div class="container">
                     </div>
                 </div>
-                <div class="carousel-item" style="background-image:url(photo.png);">
+                <div class="carousel-item" style="background-image:url(img\ \(10\).png);">
                     <div class="container">
                     </div>
                 </div>
             </div>
             <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
                 <span class="sr-only">Previous</span>
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: #F91F1F;"></span>
             </a>
             <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
                 <span class="sr-only">Previous</span>
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: #F91F1F;"></span>
             </a>
         </div>
     </div>
@@ -174,7 +174,7 @@
     <div class="box"></div>
 
     <!-- RESPONSIVE bottom NAVBAR -->
-    <footer class="page-footer font-small" style="background-color: red; border: #000000 solid 3px; height: fit-content; padding-top: 1%;">
+    <footer class="page-footer font-small" style="background-color: #F91F1F; border: #000000 solid 3px; height: fit-content; padding-top: 1%;">
         <div class="Row" style="text-align: center;">
             <div class="col">
                 <h5 class="text-uppercase">Local Hack Day</h5>
