--- a/code/index1.html
+++ b/code/index1.html
@@ -10,35 +10,39 @@
         crossorigin="anonymous">
         <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style1.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- RESPONSIVE NAVBAR -->
     <nav class="navbar navbar-custom navbar-expand-sm sticky-top ">
-        <a href="index1.html" class="navbar-brand text-costum">Local Hack Day</a>
+        <a href="index1.html" class="navbar-brand text-costum title">Local Hack Day</a>
         <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#sec1" class="nav-link text-costum">Section 1</a>
+                    <a href="#sec1" class="nav-link text-costum txt">Section 1</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#sec2" class="nav-link text-costum">Section 2</a>
+                    <a href="#sec2" class="nav-link text-costum txt">Section 2</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#sec3" class="nav-link text-costum">Section 3</a>
+                    <a href="#sec3" class="nav-link text-costum txt">Section 3</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#sec4" class="nav-link text-costum">Section 4</a>
+                    <a href="#sec4" class="nav-link text-costum txt">Section 4</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- WELCOME -->
     <h1>LOCAL HACK DAY IS HERE !</h1>
-
     <!-- SECTION 1 -->
     <div class="box"  id="sec1"></div>
     <div class="section1" >
@@ -57,9 +61,9 @@
                      <!--Card content-->
                      <div class="card-body">
                          <!--Title-->
-                         <h4 class="card-title">Card title</h4>
+                         <h4 class="card-title title">Card title</h4>
                          <!--Text-->
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
+                          <p class="card-text txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
                      </div>
                  </div>
                  <!--/.Card-->
@@ -79,9 +83,9 @@
                  <!--Card content-->
                  <div class="card-body">
                      <!--Title-->
-                     <h4 class="card-title">Card title</h4>
+                     <h4 class="card-title title">Card title</h4>
                      <!--Text-->
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
+                      <p class="card-text txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
                  </div>
              </div>
              <!--/.Card-->
@@ -101,9 +105,9 @@
                  <!--Card content-->
                  <div class="card-body">
                      <!--Title-->
-                     <h4 class="card-title">Card title</h4>
+                     <h4 class="card-title title">Card title</h4>
                      <!--Text-->
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
+                      <p class="card-text txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
                  </div>
              </div>
              <!--/.Card-->
@@ -114,9 +118,11 @@
 
     <!-- SECTION 2   still working on it -->
     <div class="box" id="sec2"></div>
-    <div class="section2 "  style="background-image: url(img\ \(10\).png); background-position: center;
-    background-size: cover;">
+    <div class="section2 ">
+        <img src="img (10).png" alt="image" class="img_sec2">
     </div>
+
+    
 
 
     <!--section3 AND AYA'S WORK-->
@@ -126,7 +132,7 @@
     <section class="section3">
         <div class="build">
             <img src="img (7).png" alt="image" class="img7">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+            <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
                 esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
@@ -143,32 +149,31 @@
        
     <!-- SECTION 4 -->
     <div class="box" id="sec4"></div>
-    <div class="section4" >
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active" style="background-image:url(img\ \(10\).png);">
-                    <div class="container">
-                    </div>
-                </div>
-                <div class="carousel-item" style="background-image:url(img\ \(10\).png);">
-                    <div class="container">
-                    </div>
-                </div>
-            </div>
-            <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-                <span class="sr-only">Previous</span>
-                <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: #F91F1F;"></span>
-            </a>
-            <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
-                <span class="sr-only">Previous</span>
-                <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: #F91F1F;"></span>
-            </a>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img (10).png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="photo.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="photo.png" class="d-block w-100" alt="...">
+          </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
     </div>
 
     <div class="box"></div>
@@ -177,8 +182,8 @@
     <footer class="page-footer font-small" style="background-color: #F91F1F; border: #000000 solid 3px; height: fit-content; padding-top: 1%;">
         <div class="Row" style="text-align: center;">
             <div class="col">
-                <h5 class="text-uppercase">Local Hack Day</h5>
-                <p>Organized by Open Minds Club, © 2021 Copyright</p>
+                <h5 class="text-uppercase title">Local Hack Day</h5>
+                <p class="text-uppercase title">Organized by Open Minds Club, © 2021 Copyright</p>
             </div>
         </div>
     </footer>
