height of cards

--- a/code/index1.html
+++ b/code/index1.html
@@ -21,11 +21,11 @@
     <!-- RESPONSIVE NAVBAR -->
     <nav class="navbar navbar-custom navbar-expand-sm sticky-top ">
         <a href="index1.html" class="navbar-brand text-costum title">Local Hack Day</a>
-        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#navbarMenu">
+        <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ">
                 <li class="nav-item">
                     <a href="#sec1" class="nav-link text-costum txt">LHD:Build C'est Quoi?</a>
                 </li>
@@ -59,10 +59,10 @@
             <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4">
                     <!--Card-->
-                    <div class="card">
+                    <div class="card h-100">
                         <!--Card image-->
-                        <div class="view overlay" style="text-align: center;"> 
-                         <img src="assets/om.png" class="card-img-top"alt="" style="height: 50%; width: 60%;">
+                        <div class="view overlay" style="height: fit-content; text-align: center;"> 
+                         <img src="assets/om.png" class="card-img-top"alt="" style="height:80%; width: 60%;">
                          <a href="#">
                              <div class="mask rgba-white-slight"></div>
                          </a>
@@ -81,10 +81,10 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4">
                     <!--Card-->
-                    <div class="card">
+                    <div class="card h-100">
                         <!--Card image-->
                         <div class="view overlay" style="text-align: center;"> 
-                         <img src="assets/om.png" class="card-img-top"alt="" style="height: 50%; width: 60%;">
+                         <img src="assets/om.png" class="card-img-top"alt="" style="height:80%; width: 60%;">
                          <a href="#">
                              <div class="mask rgba-white-slight"></div>
                          </a>
@@ -94,7 +94,7 @@
                          <!--Title-->
                          <h4 class="card-title title">Card title</h4>
                          <!--Text-->
-                          <p class="card-text txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus aliquam iusto autem, nostrum sit nisi recusandae commodi eligendi magni, quasi, iure corporis sapiente quo dolores. Fugit ad quasi rerum.</p>
+                          <p class="card-text txt">Loautem, nostrum sit nisi recusandente quo dolores. Fugit ad quasi rerum.</p>
                         </div>
                     </div>
                     <!--/.Card-->
@@ -103,10 +103,10 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4">
                     <!--Card-->
-                    <div class="card">
+                    <div class="card h-100">
                         <!--Card image-->
                         <div class="view overlay" style="text-align: center;"> 
-                         <img src="assets/om.png" class="card-img-top"alt="" style="height: 50%; width: 60%;">
+                         <img src="assets/om.png" class="card-img-top"alt="" style="height:80%; width:60%;">
                          <a href="#">
                              <div class="mask rgba-white-slight"></div>
                          </a>
